--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,13 +1,66 @@
 @import "~bootstrap/scss/bootstrap";
 
-body {
-    font-family: sans-serif;
-    background: #222;
-    color: white;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+body {
+    background-color: rgb(41, 41, 41);
+    color: white;
+    font-family: sans-serif;
+}
+
+.flex {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+}
+
+.space-between {
+    justify-content: space-between;
+    margin: 0 3rem 0 1rem;
+    align-items: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: calc(20% - 1rem);
+    border: 3px solid rgba(255, 255, 255, 0.576);
+    border-radius: 10px;
+    padding: 0.5rem;
+}
+
+h1 {
+    height: 6rem;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+span {
+    font-size: 30px;
+    color: rgb(207, 114, 0);
+}
+
+.img-container {
+    width: 100%;
+    height: 25rem;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+img {
+    width: 100%;
+}
+
+.img-container {
+    margin-bottom: 1rem;
+}
+
+#logo-79 {
+    width: 20rem;
+    height: 7rem;
 }
